# trip_planner_using_crewai

./: README.MD  agents.py  main.py  pyproject.toml  tasks.py
tools/: calculator_tools.py  search_tools.py
